[package]
name = "fact-rs"
version = "0.1.0"
edition = "2024"
description = "System facts, shipped to your door!"
repository = "https://github.com/caravel-io/fact-rs"
readme = "README.md"
keywords = ["facts", "system", "information"]
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"

[[bin]]
name = "factrs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
macaddr = { version = "1.0.1", features = ["serde_std"] }
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
